Refactor schedule controller
